tests/ui/variable_bits/size_too_large.stderr
error: variable_bits sizes cannot exceed 128 bits
 --> tests/ui/variable_bits/size_too_large.rs:4:20
  |
4 | #[variable_bits(8, 256)]  // 256 > 128 bits max
  |                    ^^^
